--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,7 +3,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-# solana_nft_anchor = "<UPDATE HERE>"
+solana_nft_anchor = "3NReB6T8WG254kVxi538V83muxcTDa1CJYR3UUC91idE"
 
 [registry]
 url = "https://api.apr.dev"
